@@ -49,20 +49,22 @@ package ifneeded starkit    1.3.2 [list source [file join $dir starkit.tcl]]
 package ifneeded vfslib     1.3.1 [list source [file join $dir vfslib.tcl]]
 
 # Old
-package ifneeded mk4vfs       1.10 [list source [file join $dir mk4vfs.tcl]]
-package ifneeded zipvfs       1.0 [list source [file join $dir zipvfs.tcl]]
+package ifneeded mk4vfs       1.10.1 [list source [file join $dir mk4vfscompat.tcl]]
+package ifneeded zipvfs       1.0.1  [list source [file join $dir zipvfscompat.tcl]]
+
+# New, for the old, keep version numbers synchronized.
+package ifneeded vfs::mk4     1.10.1 [list source [file join $dir mk4vfs.tcl]]
+package ifneeded vfs::zip     1.0.1  [list source [file join $dir zipvfs.tcl]]
 
 # New
 package ifneeded vfs::ftp     1.0 [list source [file join $dir ftpvfs.tcl]]
 package ifneeded vfs::http    0.6 [list source [file join $dir httpvfs.tcl]]
-package ifneeded vfs::mk4     1.10 [list source [file join $dir mk4vfs.tcl]]
 package ifneeded vfs::mkcl    1.4 [list source [file join $dir mkclvfs.tcl]]
 package ifneeded vfs::ns      0.5 [list source [file join $dir tclprocvfs.tcl]]
 package ifneeded vfs::tar     0.9 [list source [file join $dir tarvfs.tcl]]
 package ifneeded vfs::test    1.0 [list source [file join $dir testvfs.tcl]]
 package ifneeded vfs::urltype 1.0 [list source [file join $dir vfsUrl.tcl]]
 package ifneeded vfs::webdav  0.1 [list source [file join $dir webdavvfs.tcl]]
-package ifneeded vfs::zip     1.0 [list source [file join $dir zipvfs.tcl]]
 package ifneeded vfs::tk      0.5 [list source [file join $dir tkvfs.tcl]]
 
 
